welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: not found: type noolean
def move( nbPas : Int, versLAvant: noolean){
                                   ^