welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move( nbPas : Int, versLAvant: noolean){
  for (i<-1 to nbPas){
    if (versLAvant){
      avance()
    }else{
      recule
    }
  }
}